<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dip">
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

			<CheckBox
				android:id="@+id/securityEnabled"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
				android:text="@string/security_enabled" />
			
			<LinearLayout
				android:id="@+id/inputsContainer"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<EditText
					android:id="@+id/passwordEditText"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="20dip"
					android:imeOptions="actionNext"
					android:hint="@string/security_enter_password_hint" />
					
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textAppearance="@android:style/TextAppearance.Medium"
					android:text="@string/security_forgot_password_settings" />
					
					
				<EditText
					android:id="@+id/question1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:imeOptions="actionNext"
					android:hint="@string/security_enter_question1_hint" />
				<EditText
					android:id="@+id/answer1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="20dip"
					android:singleLine="true"
					android:imeOptions="actionNext"
					android:hint="@string/security_enter_answer1_hint" />
					
				<EditText
					android:id="@+id/question2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:imeOptions="actionNext"
					android:hint="@string/security_enter_question2_hint" />
				<EditText
					android:id="@+id/answer2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:imeOptions="actionDone"
					android:hint="@string/security_enter_answer2_hint" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
