<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/security_forgot_password_instructions"
				android:textAppearance="@android:style/TextAppearance.Medium" />
			
			<TextView
				android:id="@+id/question1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="Question 1 Text" />
			<EditText
				android:id="@+id/answer1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:imeOptions="actionNext"
				android:hint="@string/security_enter_answer1_hint" />
			
				
			<TextView
				android:id="@+id/question2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="Question 2 Text" />
			<EditText
				android:id="@+id/answer2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:imeOptions="actionGo"
				android:hint="@string/security_enter_answer2_hint" />
				
			<Button
				android:id="@+id/unlockButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:layout_gravity="right"
				android:text="@string/security_unlock_button" />
		</LinearLayout>
	</ScrollView>
	
	
	<!-- <Button	
		android:id="@+id/cancelButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/cancel" /> -->
</LinearLayout>
